# Counter-Clock

./: .gitignore  .gitmodules  README.md  final.py  lcd.py   servo.py 
7-segment-clock/: CMakeLists.txt
7-segment-clock/main/: CMakeLists.txt
7_segment_display/: CMakeLists.txt
7_segment_display/main/: 7_segment_display.c  CMakeLists.txt
check_i2c/: CMakeLists.txt
check_i2c/main/: CMakeLists.txt  check_i2c.c
components/: CMakeLists.txt
components/HD44780/: HD44780.c
components/HD44780/include/: HD44780.h
components/esp-idf-pca9685/: CMakeLists.txt
ds1307_test/: CMakeLists.txt
ds1307_test/main/: CMakeLists.txt  ds1307_test.c
final_clock/: CMakeLists.txt
final_clock/main/: CMakeLists.txt  final_clock.c
gps_test/: CMakeLists.txt  README.md
gps_test/main/: CMakeLists.txt  gps_test.c
ili9341_project/: CMakeLists.txt
ili9341_project/main/: CMakeLists.txt  main.cpp
lcd_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
lcd_test/main/: CMakeLists.txt  lcd_test.c
servo_test/: CMakeLists.txt
servo_test/main/: CMakeLists.txt  servo_test.c
set_servo_zero/: CMakeLists.txt
set_servo_zero/main/: CMakeLists.txt  set_servo_zero.c
test/: ds1307.py  lcd.py  servo.py
